--- a/Trilha 2/index.html
+++ b/Trilha 2/index.html
@@ -1,108 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <title>Power Ink Tattoo Studio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esta página possui apenas fins didáticos">
+    <meta name="keywords" content="estúdio de tatuagem para mulheres, estúdio feminino de tatuagem, tatuadora mulher">
+    <meta name="author" content="Vanessa L Gallo">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@1,600&display=swap"
-      rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@1,600&display=swap" rel="stylesheet"/>
     <script src="scripts.js"></script>
+    <title>Power Ink Tattoo Studio</title>
   </head>
+
   <body>
+<!-- Cabeçalho -->
     <div class="header-container">
       <header>
         <nav>
           <div class="logo">
-            <img src="imagens/logo.png" alt="Logo" />
+            <img src="imagens/logo.png" alt="Logotipo em tons de rosa e roxo com um rosto feminino rabiscado ao fundo" />
           </div>
           <ul class="menu">
-            <li><a href="#home">Página Inicial</a></li>
-            <li><a href="#gallery">Galeria</a></li>
-            <li><a href="#works">Trabalhos</a></li>
-            <li><a href="#about">Sobre o Estúdio</a></li>
-            <li><a href="#contact">Contato</a></li>
+            <li><a href="#home">Página Inicial</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.07"/></svg></li>
+            <li><a href="#gallery">Galeria</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.085"/></svg></li>
+            <li><a href="#works">Trabalhos</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.1"/></svg></li>
+            <li><a href="#about">Sobre o Estúdio</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.085"/></svg></li>
+            <li><a href="#contact">Contato</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.07"/></svg></li>
           </ul>
-          <div class="menu-toggle">
-            <i class="fas fa-bars"></i>
-          </div>
-        </nav>
+       </nav>
       </header>
+    
+<!-- Botão fixo do Whats-->
       <div class="contact-whats">
         <div class="contact-whats-container">
           <h3>Fale Conosco</h3>
-          <a href="https://wa.me/+5516992221259" target="_blank">
-            <img src="imagens/whats.png" alt="WhatsApp" />
-          </a>
+          <a href="https://wa.me/+5516992221259" target="_blank"><img src="imagens/whats.png" alt="Logotipo do WhatsApp" /></a>
         </div>
       </div>
 
+<!-- Página Inicial-->
       <section id="home">
         <div class="home-content">
           <h1>Power Ink</h1>
-          <p>
-            Desenhos únicos para você expressar sua personalidade, feito apenas
-            de mulheres para mulheres.
-          </p>
-          <a href="https://wa.me/+5516992221259" target="_blank"
-            ><button>Faça seu orçamento aqui</button></a
-          >
+          <p>Desenhos únicos para você expressar sua personalidade, feito apenas de mulheres para mulheres.</p>
+          <a href="https://wa.me/+5516992221259" target="_blank"><button>Faça seu orçamento aqui</button></a>
         </div>
       </section>
     </div>
 
+<!-- Galeria com desenhos-->
     <section id="gallery">
       <h2>Galeria</h2>
       <div class="gallery-container">
         <figure class="gallery-item">
-          <img src="imagens/tattoo1.jpg" alt="Tattoo 1" />
+          <img src="imagens/tattoo1.jpg" alt="Desenho 1: Fênix" />
           <figcaption>Fênix R$200,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo2.jpg" alt="Tattoo 2" />
+          <img src="imagens/tattoo2.jpg" alt="Desenho 2: Mandala" />
           <figcaption>Mandala R$180,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo3.jpeg" alt="Tattoo 3" />
+          <img src="imagens/tattoo3.jpeg" alt="Desenho 3: Serpente" />
           <figcaption>Cobra com flor R$180,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo4.jpg" alt="Tattoo 4" />
+          <img src="imagens/tattoo4.jpg" alt="Desenho 4: Rosas" />
           <figcaption>Rosas R$200,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo5.jpg" alt="Tattoo 5" />
+          <img src="imagens/tattoo5.jpg" alt="Desenho 5: Rosas" />
           <figcaption>Flores R$220,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo6.jpg" alt="Tattoo 6" />
+          <img src="imagens/tattoo6.jpg" alt="Desenho 6: Mandala com flores" />
           <figcaption>Mandala com flores R$180,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo7.jpg" alt="Tattoo 7" />
+          <img src="imagens/tattoo7.jpg" alt="Desenho 7: Rosas" />
           <figcaption>Rosas R$180,00</figcaption>
         </figure>
         <figure class="gallery-item">
-          <img src="imagens/tattoo8.png" alt="Tattoo 8" />
+          <img src="imagens/tattoo8.png" alt="Desenho 8: Borboleta" />
           <figcaption>Borboleta R$130,00</figcaption>
         </figure>
       </div>
     </section>
 
+<!-- Trabalhos prontos-->
     <section id="works" class="previousWorks">
       <h2>Trabalhos</h2>
       <div class="previous-works-pics">
-        <img src="imagens/pronta1.jpg" alt="Tatuagem pronta 1" />
-        <img src="imagens/pronta2.jpg" alt="Tatuagem pronta 2" />
-        <img src="imagens/pronta3.jpg" alt="Tatuagem pronta 3" />
-        <img src="imagens/pronta4.jpg" alt="Tatuagem pronta 4" />
-        <img src="imagens/pronta5.jpg" alt="Tatuagem pronta 5" />
-        <img src="imagens/pronta6.jpg" alt="Tatuagem pronta 6" />
+        <img src="imagens/pronta1.jpg" alt="Tatuagem elefante" />
+        <img src="imagens/pronta2.jpg" alt="Tatuagem borboleta" />
+        <img src="imagens/pronta3.jpg" alt="Tatuagem ramo" />
+        <img src="imagens/pronta4.jpg" alt="Tatuagem borboleta com ramo" />
+        <img src="imagens/pronta5.jpg" alt="Tatuagem mapa" />
+        <img src="imagens/pronta6.jpg" alt="Tatuagem girassol" />
       </div>
     </section>
 
+<!-- Fotos do estúdio-->
     <section id="about">
       <h2>Sobre o Estúdio</h2>
       <div class="institutional-pics">
@@ -110,12 +111,12 @@
           <img
             class="studio-pic"
             src="imagens/estudio1.jpg"
-            alt="Foto estudio 01"
+            alt="Foto estudio sala de tatuagem"
           />
           <img
             class="studio-pic"
             src="imagens/estudio2.jpg"
-            alt="Foto estudio 02"
+            alt="Foto estudio recepção"
           />
         </div>
         <div class="institutional-text">
@@ -129,18 +130,19 @@
             Nullam dictum quam id gravida sagittis.
           </p>
         </div>
+<!-- Vídeo-->
         <div class="institutional-media">
           <div class="institutional-video">
             <iframe
               width="720"
               height="480"
               src="https://www.youtube.com/embed/RR2to6FbC7I"
-              title="Vídeo de apresentação"
-              frameborder="0"
+              title="Vídeo de apresentação do estúdio"
             ></iframe>
           </div>
-          <div class="studio-description">
-            <img width="300" src="imagens/tatuadora.png" alt="tatuadora">
+<!-- Tatuadora-->
+          <div class="artist-description">
+            <img width="300" src="imagens/tatuadora.png" alt="desenho de uma tatuadora">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
               euismod, ante vel tincidunt venenatis, erat sapien consectetur ex,
@@ -152,10 +154,10 @@
           </div>
         </div>
       </div>
-
+<!-- Google Maps-->
       <div class="studio-localization">
         <h2>Localização</h2>
-        <p>Endereço: Rua X, número Y - São Carlos/SP</p>
+        <p>Endereço: Rua X, número Y, Jardim Paraíso - São Carlos/SP</p>
         <iframe
           class="localization"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118361.97425000185!2d-47.9660986732292!3d-22.01852497048407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b87726bb9dd181%3A0xd9d7d71505999bc!2zU8OjbyBDYXJsb3MsIFNQ!5e0!3m2!1spt-BR!2sbr!4v1676818018941!5m2!1spt-BR!2sbr"
@@ -167,18 +169,19 @@
       </div>
     </section>
 
+    <!-- Contato-->
     <section id="contact">
       <h2>Contato</h2>
       <div class="contact-container">
         <div class="contact-image">
-          <img src="imagens/logo.png" alt="" />
+          <img src="imagens/logo.png" alt="Logotipo do estudio" usemap="#female"/>
+          <map name="female">
+            <area shape="circle" coords="85,180,15" href="#home">
+          </map>
         </div>
         <div class="newsletter">
           <form class="contact-form" action="#" method="post">
-            <label for="newsletter"
-              >Cadastre-se na nossa newsletter para receber nossas
-              promoções:</label
-            >
+            <label for="newsletter">Cadastre-se na nossa newsletter para receber nossas promoções:</label>
             <input
               type="email"
               id="newsletter"
@@ -188,6 +191,7 @@
             />
             <button type="submit" onclick="mostrarMensagem()">Cadastrar</button>
           </form>
+          <p> Siga-nos também no Instagram: @powerinktattoostudio</p>
         </div>
       </div>
     </section>
