--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -153,6 +153,21 @@
             </p>
           </div>
         </div>
+<!-- Tabela de horários-->
+      <table>
+          <tr>
+            <th>Dias da Semana</th>
+            <th>Horário de Atendimento</th>
+          </tr>
+          <tr>
+            <td>Segunda a Sexta</td>
+            <td>das 10h às 22h</td>
+          </tr>
+          <tr>
+            <td>Sábados e Domingos</td>
+            <td>das 10h às 13h</td>
+          </tr>
+      </table>
       </div>
 <!-- Google Maps-->
       <div class="studio-localization">
@@ -197,7 +212,7 @@
     </section>
 
     <footer>
-      <p>Criado por Vanessa L. Gallo - 2023</p>
+      <p>Criado por Vanessa L. Gallo apenas para fins didáticos - 2023</p>
     </footer>
   </body>
 </html>
