--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -153,21 +153,23 @@
             </p>
           </div>
         </div>
-<!-- Tabela de horários-->
+      </div>
+      <div class="tabela-horarios">
+        <!-- Tabela de horários-->
       <table>
-          <tr>
-            <th>Dias da Semana</th>
-            <th>Horário de Atendimento</th>
-          </tr>
-          <tr>
-            <td>Segunda a Sexta</td>
-            <td>das 10h às 22h</td>
-          </tr>
-          <tr>
-            <td>Sábados e Domingos</td>
-            <td>das 10h às 13h</td>
-          </tr>
-      </table>
+        <tr>
+          <th>Dias da Semana</th>
+          <th>Horário de Atendimento</th>
+        </tr>
+        <tr>
+          <td>Segunda a Sexta</td>
+          <td>das 10h às 22h</td>
+        </tr>
+        <tr>
+          <td>Sábados e Domingos</td>
+          <td>das 10h às 13h</td>
+        </tr>
+    </table>
       </div>
 <!-- Google Maps-->
       <div class="studio-localization">
