--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -178,8 +178,7 @@
         <iframe
           class="localization"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118361.97425000185!2d-47.9660986732292!3d-22.01852497048407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b87726bb9dd181%3A0xd9d7d71505999bc!2zU8OjbyBDYXJsb3MsIFNQ!5e0!3m2!1spt-BR!2sbr!4v1676818018941!5m2!1spt-BR!2sbr"
-          style="border: 0"
-          allowfullscreen=""
+          style="border: solid 4px var(--rosa); border-radius: 10px;"
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
