--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -24,11 +24,11 @@
             <img src="imagens/logo.png" alt="Logotipo em tons de rosa e roxo com um rosto feminino rabiscado ao fundo" />
           </div>
           <ul class="menu">
-            <li><a href="#home">Página Inicial</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.07"/></svg></li>
-            <li><a href="#gallery">Galeria</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.085"/></svg></li>
-            <li><a href="#works">Trabalhos</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.1"/></svg></li>
-            <li><a href="#about">Sobre o Estúdio</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.085"/></svg></li>
-            <li><a href="#contact">Contato</a><svg height="60" width="60"><circle cx="30" cy="0" r="20" fill="#df71ff" opacity="0.07"/></svg></li>
+            <li><a href="#home">Página Inicial</a><svg height="80" width="80"><circle cx="40" cy="40" r="25" fill="var(--lilas)" opacity="0.25"/></svg></li>
+            <li><a href="#gallery">Galeria</a><svg height="80" width="80"><circle cx="40" cy="40" r="25" fill="var(--lilas)" opacity="0.25"/></svg></li>
+            <li><a href="#works">Trabalhos</a><svg height="80" width="80"><circle cx="40" cy="40" r="25" fill="var(--lilas)" opacity="0.25"/></svg></li>
+            <li><a href="#about">Sobre o Estúdio</a><svg height="80" width="80"><circle cx="40" cy="40" r="25" fill="var(--lilas)" opacity="0.25"/></svg></li>
+            <li><a href="#contact">Contato</a><svg height="80" width="80"><circle cx="40" cy="40" r="25" fill="var(--lilas)" opacity="0.25"/></svg></li>
           </ul>
        </nav>
       </header>
@@ -36,7 +36,6 @@
 <!-- Botão fixo do Whats-->
       <div class="contact-whats">
         <div class="contact-whats-container">
-          <h3>Fale Conosco</h3>
           <a href="https://wa.me/+5516992221259" target="_blank"><img src="imagens/whats.png" alt="Logotipo do WhatsApp" /></a>
         </div>
       </div>
@@ -155,7 +154,7 @@
         </div>
       </div>
       <div class="tabela-horarios">
-        <!-- Tabela de horários-->
+<!-- Tabela de horários-->
       <table>
         <tr>
           <th>Dias da Semana</th>
