--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="estúdio de tatuagem para mulheres, estúdio feminino de tatuagem, tatuadora mulher">
     <meta name="author" content="Vanessa L. Gallo">
     <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -113,16 +114,16 @@
       <h2>Sobre o Estúdio</h2>
       <div class="institutional-pics">
         <div class="studio-pics">
-          <img
-            class="studio-pic"
-            src="imagens/estudio1.jpg"
-            alt="Foto estudio sala de tatuagem"
-          />
-          <img
-            class="studio-pic"
-            src="imagens/estudio2.jpg"
-            alt="Foto estudio recepção"
-          />
+          <div class="cards">
+            <img class="studio-pic" src="imagens/estudio1.jpg" alt="Foto estudio sala de tatuagem"/>
+            <h3>Sala de Tatuagem</h3>
+            <p>Aqui é a sala onde a arte acontece. Nossa intenção é que você fique super a vontade e com conforto, então contamos com macas ajustáveis, som ambiente, ar condicionado/aquecedor e claro, aromaterapia</p>
+          </div>
+          <div class="cards">
+            <img class="studio-pic" src="imagens/estudio2.jpg" alt="Foto estudio recepção"/>
+            <h3>Recepção</h3>
+            <p>Aqui é onde você pode tomar um café, relaxar, ouvir uma música e aguardar a sua sessão. Traga seu acompanhante também e registrem sua marca no nosso mural de mulheres fortes.</p>
+          </div>
         </div>
         <div class="institutional-text">
           <p>
@@ -147,7 +148,7 @@
           </div>
 <!-- Tatuadora-->
           <div class="artist-description">
-            <img width="300" src="imagens/tatuadora.png" alt="desenho de uma tatuadora">
+            <img class="img-tatuadora" src="imagens/tatuadora.png" alt="desenho de uma tatuadora">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
               euismod, ante vel tincidunt venenatis, erat sapien consectetur ex,
