--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -100,12 +100,14 @@
     <section id="works" class="previousWorks">
       <h2>Trabalhos</h2>
       <div class="previous-works-pics">
-        <img src="imagens/pronta1.jpg" alt="Tatuagem elefante" />
-        <img src="imagens/pronta2.jpg" alt="Tatuagem borboleta" />
-        <img src="imagens/pronta3.jpg" alt="Tatuagem ramo" />
-        <img src="imagens/pronta4.jpg" alt="Tatuagem borboleta com ramo" />
-        <img src="imagens/pronta5.jpg" alt="Tatuagem mapa" />
-        <img src="imagens/pronta6.jpg" alt="Tatuagem girassol" />
+        <div class="previous-works-pics-wrapper">
+          <img src="imagens/pronta1.jpg" alt="Tatuagem elefante" />
+          <img src="imagens/pronta2.jpg" alt="Tatuagem borboleta" />
+          <img src="imagens/pronta3.jpg" alt="Tatuagem ramo" />
+          <img src="imagens/pronta4.jpg" alt="Tatuagem borboleta com ramo" />
+          <img src="imagens/pronta5.jpg" alt="Tatuagem mapa" />
+          <img src="imagens/pronta6.jpg" alt="Tatuagem girassol" />
+        </div>
       </div>
     </section>
 
