--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -61,38 +61,16 @@
     <section id="gallery">
       <h2>Galeria</h2>
       <div class="gallery-container">
-        <figure class="gallery-item">
-          <img src="imagens/tattoo1.jpg" alt="Desenho 1: Fênix" />
-          <figcaption>Fênix R$200,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo2.jpg" alt="Desenho 2: Mandala" />
-          <figcaption>Mandala R$180,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo3.jpeg" alt="Desenho 3: Serpente" />
-          <figcaption>Cobra com flor R$180,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo4.jpg" alt="Desenho 4: Rosas" />
-          <figcaption>Rosas R$200,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo5.jpg" alt="Desenho 5: Rosas" />
-          <figcaption>Flores R$220,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo6.jpg" alt="Desenho 6: Mandala com flores" />
-          <figcaption>Mandala com flores R$180,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo7.jpg" alt="Desenho 7: Rosas" />
-          <figcaption>Rosas R$180,00</figcaption>
-        </figure>
-        <figure class="gallery-item">
-          <img src="imagens/tattoo8.png" alt="Desenho 8: Borboleta" />
-          <figcaption>Borboleta R$130,00</figcaption>
-        </figure>
+        <img class="gallery-item" src="imagens/tattoo8.jpg" alt="Desenho 1: Gato" />
+        <img class="gallery-item" src="imagens/tattoo2.jpg" alt="Desenho 2: Mandala" />
+        <img class="gallery-item" src="imagens/tattoo7.jpg" alt="Desenho 3: Gratidão" />
+        <img class="gallery-item" src="imagens/tattoo4.jpg" alt="Desenho 4: Rosas" />
+        <img class="gallery-item" src="imagens/tattoo1.jpg" alt="Desenho 5: Gaiola" />
+        <img class="gallery-item" src="imagens/tattoo6.jpg" alt="Desenho 6: Girassol" />
+        <img class="gallery-item" src="imagens/tattoo3.jpeg" alt="Desenho 7: Serpente" />
+        <img class="gallery-item" src="imagens/tattoo5.jpg" alt="Desenho 8: Mulher" />
+        <img class="gallery-item" src="imagens/tattoo9.jpg" alt="Desenho 9: Coração" />
+        <img class="gallery-item" src="imagens/tattoo10.jpg" alt="Desenho 10: Leão" />
       </div>
     </section>
 
