--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -61,16 +61,16 @@
     <section id="gallery">
       <h2>Galeria</h2>
       <div class="gallery-container">
-        <img class="gallery-item" src="imagens/tattoo8.jpg" alt="Desenho 1: Gato" />
-        <img class="gallery-item" src="imagens/tattoo2.jpg" alt="Desenho 2: Mandala" />
-        <img class="gallery-item" src="imagens/tattoo7.jpg" alt="Desenho 3: Gratidão" />
-        <img class="gallery-item" src="imagens/tattoo4.jpg" alt="Desenho 4: Rosas" />
-        <img class="gallery-item" src="imagens/tattoo1.jpg" alt="Desenho 5: Gaiola" />
-        <img class="gallery-item" src="imagens/tattoo6.jpg" alt="Desenho 6: Girassol" />
-        <img class="gallery-item" src="imagens/tattoo3.jpeg" alt="Desenho 7: Serpente" />
-        <img class="gallery-item" src="imagens/tattoo5.jpg" alt="Desenho 8: Mulher" />
-        <img class="gallery-item" src="imagens/tattoo9.jpg" alt="Desenho 9: Coração" />
-        <img class="gallery-item" src="imagens/tattoo10.jpg" alt="Desenho 10: Leão" />
+        <figure class="gallery-item"><img src="imagens/tattoo8.jpg" alt="Desenho 1: Gato"/><figcaption>Perfil de gato R$ 200,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo2.jpg" alt="Desenho 2: Mandala"/><figcaption>Flor de Lótus R$ 250,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo7.jpg" alt="Desenho 3: Gratidão"/><figcaption>Gratidão com flores R$ 220,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo4.jpg" alt="Desenho 4: Rosas"/><figcaption>Rosas 230,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo1.jpg" alt="Desenho 5: Pássaro"/><figcaption>Pássaro R$ 340,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo6.jpg" alt="Desenho 6: Girassol"/><figcaption>Girassol R$ 300,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo3.jpeg" alt="Desenho 7: Serpente"/><figcaption>Serpente com flores R$ 220,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo5.jpg" alt="Desenho 8: Mulher"/><figcaption>Perfil de mulher R$ 230,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo9.jpg" alt="Desenho 9: Coração"/><figcaption>Coração com flores R$ 250,00</figcaption></figure>
+        <figure class="gallery-item"><img src="imagens/tattoo10.jpg" alt="Desenho 10: Leão"/><figcaption>Perfil de leão R$ 280,00</figcaption></figure>
       </div>
     </section>
 
@@ -188,9 +188,7 @@
               type="email"
               id="newsletter"
               name="newsletter"
-              placeholder="Digite seu e-mail"
-              required
-            />
+              placeholder="Digite seu e-mail" required/>
             <button type="submit" onclick="mostrarMensagem()">Cadastrar</button>
           </form>
           <p> Siga-nos também no Instagram: @powerinktattoostudio</p>
