--- a/Trilha 2/PowerInk/index.html
+++ b/Trilha 2/PowerInk/index.html
@@ -7,7 +7,6 @@
     <meta name="keywords" content="estúdio de tatuagem para mulheres, estúdio feminino de tatuagem, tatuadora mulher">
     <meta name="author" content="Vanessa L. Gallo">
     <meta name="robots" content="index, follow">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -92,7 +91,7 @@
 <!-- Fotos do estúdio-->
     <section id="about">
       <h2>Sobre o Estúdio</h2>
-      <div class="institutional-pics">
+      <div>
         <div class="studio-pics">
           <div class="cards">
             <img class="studio-pic" src="imagens/estudio1.jpg" alt="Foto estudio sala de tatuagem"/>
@@ -140,8 +139,8 @@
           </div>
         </div>
       </div>
-      <div class="tabela-horarios">
 <!-- Tabela de horários-->
+      <div class="tabela-horarios">
       <table id="time">
         <tr>
           <th>Dias da Semana</th>
@@ -158,7 +157,7 @@
     </table>
       </div>
 <!-- Google Maps-->
-      <div class="studio-localization" id="localization">
+      <div class="studio-localization">
         <h2>Localização</h2>
         <p>Endereço: Rua X, número Y, Jardim Paraíso - São Carlos/SP</p>
         <iframe
@@ -175,7 +174,7 @@
     <section id="contact">
       <h2>Contato</h2>
       <div class="contact-container">
-        <div class="contact-image">
+        <div>
           <img src="imagens/logo.png" alt="Logotipo do estudio" usemap="#female"/>
           <map name="female">
             <area shape="circle" coords="85,180,15" href="#home">
